	* TODO:JK: implemented super-threaded recycling
	* fixed finalize to call parent class of managers
	* fixed finalize to reset global variable after finalize of managers
	* fixed g_list_position() call to have nested g_list_find() in ags_polling_thread.c
	* fixed missing return in ags_destroy_entry_alloc()
	* fixed AGS_TASK_GET_CLASS() macro to remove not opened paranthesis
	* new unit-test ags_complex_test.c
	* new unit-test ags_turtle_manager_test.c
	* new unit-test ags_log_test.c
	* new unit-test ags_application_context_test.c
	* new unit-test ags_connection_manager_test.c
	* new unit-test ags_config_test.c
	* new unit-test ags_polling_thread_test.c
	* new unit-test ags_poll_fd_test.c
	* new unit-test ags_returnable_thread_test.c
	* new unit-test ags_task_test.c
	* new unit-test ags_condition_manager_test.c
	* new unit-test ags_mutex_manager_test.c
	* new unit-test ags_destroy_worker_test.c
	* new unit-test ags_dssi_plugin_test.c
	* new unit-test ags_dssi_manager_test.c
	* new unit-test ags_base_plugin_test.c

ags (0.8.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed orphaned AgsAudio after removing all soundcards to add again

ags (0.8.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented move note task
	* implmeneted crop note task
	* implemented all task's finalize function
	* improved all task's to use properties to instantiate

ags (0.8.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMoveNoteDialog as additional editing tool
	* implemented AgsCropNoteDialog as additional editing tool
	* implmeneted missing ags_toolbar_disconnect() function

ags (0.8.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsEnvelopeInfo plot
	* enable grid lines of tree view
	* added property AgsMachine:machine-name and thus did a small refactoring

ags (0.8.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-envelope to apply ratio